# Time-lapse_ElasticSiameseFWI

./: ElasticSiameseFWI_SeamArid_NormalizedLoss.ipynb  README.md  SiameseEFWI_SEAMArid_Normalize_Pressure.ipynb  SiameseFWI_DDWI_CDWI.ipynb  SiameseFWI_DDWI_CDWI_FWI.ipynb  SiameseFWI_ParallelCascaded.ipynb  SiameseFWI_ParallelCascadedFWI.ipynb  environment.yml  pyproject.toml
Model/: Module22_644.py
data/: rho_arid_shallow.npy  vp_arid_shallow.npy  vs_arid_shallow.npy
utils/: utils.py
