[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "project-name-here"
authors = [
    {name = "Omar", email = "omar.sadaly@kaust.edu.sa"},
]
description = "Elastic FWI using Siamese Network"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["inverse problems", "seismic"]
license = {text = "BSD 3-Clause License"}
classifiers = [
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
dependencies = [
//        "numpy >= 1.24.3",
//        "torch>=2.1.1",
//        "pylops >= 2.0.0",
// 	      "setuptools >= 68.0.0",
    ]

dynamic = ["version"]

[tool.setuptools.packages]
find = {}
